Add /api prefix to public routes
Allows to filter public routes directly from the url for an
API gateway (as Kong)
